# fitparser_ex

./: .gitignore  README.md  checksum-Elixir.Fitparser.Native.exs  mix.exs
.github/workflows/: release.yml
config/: config.exs
lib/: fitparser.ex
native/.cargo/: config
native/fitparser_native/: Cargo.toml  README.md
native/fitparser_native/src/: lib.rs
test/: fitparser_test.exs
