[package]
name = "fitparser_native"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "fitparser_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]

[dependencies]
fitparser = "0.6"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0"
serde_rustler = {git = "https://github.com/benhaney/serde_rustler.git"}
rustler = "0.30"
derive_more = "0.99.17"
