[package]
name = "fitparser_native"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "fitparser_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.30"
fitparser = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_rustler = {git = "https://github.com/benhaney/serde_rustler.git"}
